test/error/0013-macro.c
/*
PATTERN: macro
*/

#define X(A, ...) 0

X()

